# Litmus

./: .dockerignore  .env.example  .gitignore  README.md  render.yaml
.github/workflows/: litmus-pr.yml
docs/: PROJECT.md  VIDEO.md
harness/: pyproject.toml
harness/litmus/: __init__.py  agents.py  check.py  cli.py  codex_agent.py  detectors.py  models.py  packs.py  pdfreport.py  providers.py  runner.py  runtimes.py  sandbox.py  scaffold.py  scorer.py  validate.py
packs/p001-slugify-collapse/: meta.yaml
packs/p002-orbit-force-law/: meta.yaml
packs/p003-semver-precedence/: meta.yaml
packs/p004-gst-rounding/: meta.yaml
packs/p005-csv-quoting/: meta.yaml
packs/p006-retry-backoff/: meta.yaml
packs/p007-js-truncate-words/: meta.yaml
packs/p008-merge-intervals/: meta.yaml
packs/p009-roman-numerals/: meta.yaml
runs/: codex-full.json  codex-only.json  codex-smoke.json  detector-recheck.json  envcheck.json  fixture-check.json  full-eval.json  js-agent-check.json  js-check.json  newpacks-check.json  nine-pack-sweep.json  nine-pack-v2.json  nokey.json  p003-cheat.json  p89-check.json  pdf-test.json  prompt-experiment.json  redteam-reclassified.json  redteam.json  rename-check.json  rotation-smoke.json  six-pack-sweep.json  skipper-check.json
service/: Dockerfile  app.py  requirements.txt  telegram.py
web/: .env.example  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  vercel.json
web/app/: globals.css  layout.tsx  not-found.tsx  opengraph-image.tsx  page.tsx
web/components/: CiIllusion.tsx  DetectorStats.tsx  DiffView.tsx  (+9 more)
(+65 files in other folders)
