[project]
name = "litmus"
version = "0.1.0"
description = "Held-out test harness that measures whether coding agents fix bugs or game tests"
requires-python = ">=3.11"
dependencies = [
    "pytest>=8.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
openai = ["openai>=1.40"]
gemini = ["google-genai>=1.0"]
agents = ["openai>=1.40", "google-genai>=1.0"]

[project.scripts]
litmus = "litmus.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["litmus*"]
